--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.6",
     "framer-motion": "^12.23.24",
